rewrapped git-folios, the order for mobile screens is now correct

--- a/css/main.css
+++ b/css/main.css
@@ -710,7 +710,13 @@ header {
   position: relative;
 }
 
-.grid-small-folio-wrapper, .grid-folio-main {
+.grid-small-folio-wrapper {
+  height: 100%;
+  width: 25%;
+  position: absolute;
+}
+
+.grid-folio-main {
   height: 100%;
   width: 50%;
   position: absolute;
@@ -728,9 +734,13 @@ header {
   height: 100%;
 }
 
+.grid-small-folio-wrapper--column__1 {
+  right: 25%;
+}
+
 .grid-folio {
   position: relative;
-  width: 50%;
+  width: 100%;
   height: 50%;
   overflow: hidden;
   z-index: 1;
@@ -739,6 +749,7 @@ header {
 
 .grid-folio__large {
   height: 100%;
+  width: 50%;
 }
 
 .grid-folio::before {
@@ -775,6 +786,7 @@ header {
 }
 
 .grid-folio--info {
+  text-transform: uppercase;
   position: absolute;
   bottom: 0;
   padding: 0 4.17vw 4.26vh 2.29vw;
@@ -831,17 +843,28 @@ header {
     width: 100%;
   }
   .grid-small-folio-wrapper {
+    height: 200vw;
     top: 100vw;
+  }
+  .grid-small-folio-wrapper--column__1 {
+    right: 0;
+  }
+  .grid-small-folio-wrapper--column__2 {
+    right: 0;
+    top: 300vw;
   }
   .grid-folio {
     width: 100%;
     height: 100vw;
   }
+  .grid-folio--info {
+    padding-left: 4vw;
+  }
   .grid-folio--info__headline {
-    font-size: 6.2vw;
+    font-size: 5vw;
   }
   .grid-folio--info__subheadline {
-    font-size: 6vw;
+    font-size: 3vw;
   }
 }
 /*# sourceMappingURL=main.css.map */
