--- a/css/partials/_grid.scss
+++ b/css/partials/_grid.scss
@@ -13,7 +13,12 @@
     position: relative;
 }
 
-.grid-small-folio-wrapper, .grid-folio-main{
+.grid-small-folio-wrapper{
+    height: 100%;
+    width:25%;
+    position: absolute;    
+} 
+.grid-folio-main{
     height: 100%;
     width:50%;
     position: absolute;
@@ -26,11 +31,13 @@
     flex-wrap: wrap;
     height: 100%;
 }
-
+.grid-small-folio-wrapper--column__1{
+    right: 25%;
+}
 
 .grid-folio{
 position: relative;
-width: 50%;
+width: 100%;
 height: 50%;
 overflow: hidden;
 z-index: 1;
@@ -38,6 +45,7 @@ background-color: lime;
 }
 .grid-folio__large{
     height: 100%;
+    width: 50%;
 }
 .grid-folio::before{
     content:'';
@@ -71,6 +79,7 @@ background-color: lime;
 }
 
 .grid-folio--info{
+    text-transform: uppercase;
     position: absolute;
     bottom: 0;
     padding: 0 4.17vw 4.26vh 2.29vw;
@@ -137,18 +146,29 @@ background-color: lime;
         // position: absolute;
     }
     .grid-small-folio-wrapper{
+        height: 200vw;
         top: 100vw;
+    }
+    .grid-small-folio-wrapper--column__1{
+        right: 0;
+    }
+    .grid-small-folio-wrapper--column__2{
+        right: 0;
+        top: 300vw;
     }
     .grid-folio{
         width: 100%;
         height: 100vw;
     }
+    .grid-folio--info{
+        padding-left: 4vw;
+    }
     .grid-folio--info__headline{
-        font-size: 6.2vw;
+        font-size: 5vw;
     }
 
     .grid-folio--info__subheadline{
-        font-size: 6vw;
+        font-size: 3vw;
     }
     
 }
